# gces-trabalho-extra

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: arquitetura.md  evidencias.md  submissao.md
src/: __init__.py  config.py  db.py  models.py
src/api/: __init__.py  main.py
src/catalog/: __init__.py  metrics.py  show_metrics.py
src/contracts/: __init__.py  extraction.py
src/ingestion/: __init__.py  discover.py  run.py  sources.py
src/llm/: __init__.py  client.py
src/processing/: __init__.py  extract.py  parse_pdf.py
src/prompts/: extraction_v1.md
tests/: test_api.py  test_db_schema.py  test_discover.py  test_extract_command.py  test_extraction_contract.py  test_ingestion_run.py  test_llm_client.py  test_parse_pdf.py  test_persist_metrics.py
